force-app/main/default/objects/Rejet_Bancaire__c/Rejet_Bancaire__c.object-meta.xml
<CustomObject>
    <label>Impayé Bancaire</label>
    <nameField>
        <label>Nom d&apos;impayé Bancaire</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Impayés Bancaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>