force-app/main/default/objects/Rejet_Bancaire__c/fields/CodeFamille__c.field-meta.xml
<CustomField>
    <fullName>CodeFamille__c</fullName>
    <label>CodeFamille</label>
    <length>4</length>
    <type>Text</type>
</CustomField>