force-app/main/default/objects/Rejet_Bancaire__c/fields/CodeSubFamille__c.field-meta.xml
<CustomField>
    <fullName>CodeSubFamille__c</fullName>
    <label>CodeSubFamille</label>
    <length>4</length>
    <type>Text</type>
</CustomField>