force-app/main/default/objects/Rejet_Bancaire__c/fields/CreditDebitCode__c.field-meta.xml
<CustomField>
    <fullName>CreditDebitCode__c</fullName>
    <label>CreditDebitCode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>