force-app/main/default/objects/Rejet_Bancaire__c/fields/Date_de_la_transaction__c.field-meta.xml
<CustomField>
    <fullName>Date_de_la_transaction__c</fullName>
    <label>Date de la transaction</label>
    <type>Date</type>
</CustomField>