force-app/main/default/objects/Rejet_Bancaire__c/fields/Devise__c.field-meta.xml
<CustomField>
    <fullName>Devise__c</fullName>
    <label>Devise</label>
    <length>3</length>
    <type>Text</type>
</CustomField>