force-app/main/default/objects/Rejet_Bancaire__c/fields/EndToEndId__c.field-meta.xml
<CustomField>
    <fullName>EndToEndId__c</fullName>
    <label>EndToEndId</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>