force-app/main/default/objects/Rejet_Bancaire__c/fields/IBANCrediteur__c.field-meta.xml
<CustomField>
    <fullName>IBANCrediteur__c</fullName>
    <label>IBANCrediteur</label>
    <length>40</length>
    <type>Text</type>
</CustomField>