force-app/main/default/objects/Rejet_Bancaire__c/fields/IBANDebiteur__c.field-meta.xml
<CustomField>
    <fullName>IBANDebiteur__c</fullName>
    <label>IBANDébiteur</label>
    <length>40</length>
    <type>Text</type>
</CustomField>