force-app/main/default/objects/Rejet_Bancaire__c/fields/Import_de_rejets__c.field-meta.xml
<CustomField>
    <fullName>Import_de_rejets__c</fullName>
    <label>Import d&apos;impayés</label>
    <referenceTo>Import_de_rejet__c</referenceTo>
    <relationshipLabel>Impayés Bancaires</relationshipLabel>
    <relationshipName>Rejets_Bancaires</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>