force-app/main/default/objects/Rejet_Bancaire__c/fields/Motif_de_rejet__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_rejet__c</fullName>
    <label>Motif d&apos;impayé</label>
    <length>10</length>
    <type>Text</type>
</CustomField>