force-app/main/default/objects/Rejet_Bancaire__c/fields/Nom_du_Beneficiaire__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_Beneficiaire__c</fullName>
    <label>Nom du Bénéficiaire</label>
    <length>30</length>
    <type>Text</type>
</CustomField>