force-app/main/default/objects/Rejet_Bancaire__c/fields/Reference_Comptable_banque__c.field-meta.xml
<CustomField>
    <fullName>Reference_Comptable_banque__c</fullName>
    <label>Référence Comptable banque</label>
    <length>25</length>
    <type>Text</type>
</CustomField>