force-app/main/default/objects/Rejet_Bancaire__c/fields/Type_du_fichier_de_rejet__c.field-meta.xml
<CustomField>
    <fullName>Type_du_fichier_de_rejet__c</fullName>
    <label>Type du fichier d&apos;impayé</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TIP/SEPA</fullName>
            </value>
            <value>
                <fullName>CB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>